<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#327CFFFA"
    tools:context=".VerdadORetoJuego">

    <Button
        android:id="@+id/btR"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:text="@string/stReto"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:backgroundTint="#81D4FA"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btV" />

    <TextView
        android:id="@+id/tvVoR2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/stVoRElige"
        android:textColor="@color/purple_500"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <Button
        android:id="@+id/btV"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:layout_marginTop="56dp"
        android:text="@string/stVerdad"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:backgroundTint="#81D4FA"
        app:cornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVoR2" />

</androidx.constraintlayout.widget.ConstraintLayout>