<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#327CFFFA"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btVor"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:layout_marginTop="80dp"
        android:text="@string/stVor"
        android:textSize="30sp"
        app:backgroundTint="#81D4FA"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btYn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btYn"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:text="@string/stYn"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:backgroundTint="#81D4FA"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <TextView
        android:id="@+id/tvInicio"
        android:layout_width="298dp"
        android:layout_height="104dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/stMinijuegos"
        android:textColor="@color/purple_500"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btYn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>